feat: Add new custom footer section with configurable layout, styling, navigation, and social links.

--- a/sections/custom-footer.liquid
+++ b/sections/custom-footer.liquid
@@ -93,14 +93,12 @@
             </li>
           {% else %}
             <li>
-              <a href="#">About</a>
+              <a href="/pages/about">About</a>
             </li>
             <li>
-              <a href="#">Contact</a>
+              <a href="/pages/contact">Contact</a>
             </li>
-            <li>
-              <a href="#">Stockists</a>
-            </li>
+           
           {% endfor %}
         </ul>
       </div>
@@ -115,13 +113,10 @@
             </li>
           {% else %}
             <li>
-              <a href="#">Shipping</a>
+              <a href="/pages/shipping-returns">Shipping & Returns</a>
             </li>
             <li>
-              <a href="#">Returns and Exchanges</a>
-            </li>
-            <li>
-              <a href="#">Customer Service</a>
+              <a href="/pages/size-guide">Size Guide</a>
             </li>
           {% endfor %}
         </ul>
@@ -140,16 +135,14 @@
             </li>
           {% else %}
             <li>
-              <a href="#">Terms and Conditions</a>
+              <a href="/pages/terms-and-conditions">Terms and Conditions</a>
             </li>
             <li>
-              <a href="#">Privacy Policy</a>
+              <a href="/pages/privacy-policy">Privacy Policy</a>
             </li>
+           
             <li>
-              <a href="#">Accessibility</a>
-            </li>
-            <li>
-              <a href="#">Cookie Policy</a>
+              <a href="/pages/cookie-policy">Cookie Policy</a>
             </li>
           {% endfor %}
         </ul>
